<resources>
    <string name="auto_test">"AutoTest"</string>
    <string name="auto_test_2">"AutoTest2"</string>
    <string name="single_test">"HW Test"</string>
    <string name="test_result">"Test Report"</string>
    <string name="master_clear">"Restore factory"</string>
    <string name="wait">"Please wait..."</string>
    <string name="result_from_sn">"Test results from the flag"</string>
    <string name="result_from_test">"Test results of the AutoTest"</string>
    <string name="no_mmitest">"No Test completed"</string>
    <string name="mmitest_success">"Test succeed"</string>
    <string name="mmitest_fail">"Test failed"</string>
    <string name="sn_info">"SN："</string>
    <string name="Send_IR_2">"Send_IR_2"</string>
    <string name="Send_IR_1">"Send_IR_1"</string>
    <string name="Send_IR_3">"Send_IR_3"</string>
    <string name="Welcome">"Welcome"</string>
    <string name="IR_Code">"IR_Code :"</string>
    <string name="send_data">"Send data"</string>
    <string name="send_data_ok">"Send data succeed"</string>
    <string name="send_data_fail">"send data failed"</string>
    <string name="Carrier_Freq">"Carrier Freq :"</string>
    <string name="receiver_data">"Receive data"</string>
    <string name="receiver_data_ing">"Please wait while receiving data....."</string>
    <string name="fingerprints">"Fingerprints"</string>
    <string name="fingerprints2">"Fingerprint defective pixel test"</string>
    <string name="fingerprints3">"fingerprint performance identification</string>
    <string name="fingerprints_test">"It takes 5s to test fingerprint performance. Please touch the fingerprint sensor every 1s within 5s"</string>
    <string name="fingertestsucc">fingerprint performance identification succeed!</string>
    <string name="fingertestfaild">fingerprint performance identification failed!</string>
    <string name="fingerprints_note">"Put your fingers in the fingerprint reader, the fingerprint identification will start."</string>
    <string name="fingerprints_note2">"Put your fingers in the fingerprint reader and test fingerprint defective pixel"</string>
    <string name="capturefailed">Capture failed!</string>
    <string name="capturesucc">Capture succeed!</string>
    <string name="sensortest_deadpixel_test_success">Defective pixel test pass!</string>
    <string name="sensortest_deadpixel_test_fail">The number of defective pixel is：！</string>
    <string name="sensortest_deadpixel_test_exception">Defective pixel test exception!</string>
    <string name="sensortest_exception">unknown test exception!</string>
    <string name="test_right">"Test passed"</string>
    <string name="test_wrong">"Test failed"</string>
    <string name="fix">"Please Calibrate"</string>
    <string name="right">"Pass"</string>
    <string name="wrong">"Fail"</string>
    <string name="plus">"+"</string>
    <string name="minus">"-"</string>
    <string name="default_value">"reset"</string>
    <string name="test_title">"Please judge the test results"</string>
    <string name="master_clear_title" msgid="5907939616087039756">"Restore factory"</string>
    <string name="master_clear_final_desc" msgid="6917971132484622696">"Do you want to remove all personal information and downloaded applications?This operation cannot be restored!"</string>
    <string name="hello">Hello World, GnHardWareTestActivity!</string>
    <string name="app_name">GnHardWareTest</string>
    <string name="sw_version">"SW Version"</string>
    <string name="keys">"Key Test"</string>
    <string name="touch_pad">"CTP(Line)"</string>
    <string name="touch_priv_pad">"CTP(Full)"</string>
    <string name="touch_priv_pad_ing">"CTP full testing，please wait....."</string>
    <string name="touch_priv_pad_ok">"CTP full test succeed"</string>
    <string name="touch_priv_pad_fail">"CTP full test failed"</string>
    <string name="pass">"Pass"</string>
    <string name="restart">"Restart"</string>
    <string name="quit">"Quit"</string>
    <string name="quit1">" Save setting data and exit"</string>
    <string name="color">"LCD"</string>
    <string name="screen_brightness">"Backlight"</string>
    <string name="vibrate">"Vibrate"</string>
    <string name="light">"LED"</string>
    <string name="tone">"Speaker"</string>
    <string name="tone2">"Speaker2"</string>
    <string name="receiver">"Receiver"</string>
    <string name="receiver2">"Receiver2/Proximity""</string>
    <string name="gyroscope">"Gyroscope"</string>
    <string name="acceleration">"Accelerometer"</string>
    <string name="magnetic_field">"Magnetic"</string>
    <string name="light_proximity">"proximity/light sensor"</string>
    <string name="light_sensor">"light sensor"</string>
    <string name="light_num_default">"1"</string>
    <string name="mcrnt_distanse">"Distance/Thresholds"</string>
    <string name="mfix_distanse">"Value"</string>
    <string name="proximity_sensor">"proximity sensor"</string>
    <string name="back_camera">"Back Camera"</string>
    <string name="back_camera2">"Back Camera 2"</string>
    <string name="front_camera">"Front Camera"</string>
    <string name="take_picture">"Take picture"</string>
    <string name="preview">"Preview"</string>
    <string name="acceler_cal">"Please flat the phone for calibration, and wait about five seconds"</string>
    <string name="acceler_ok">"Calibrate succeed"</string>
    <string name="acceler_fail">"Calibrate failed，please flat the phone for calibration"</string>
    <string name="acceler_caling">"calibration....."</string>
    <string name="acceler">"Auto calibration"</string>
    <string name="FlashLight">"Torch"</string>
    <string name="SetColor">"Set Color</string>
    <string name="acceleration_note">"Please rotate the phone to positive/negative/up/down/left/right six directions , when measured in six direction finished, pass button will active."</string>
    <string name="magnetic_field_test">"Please calibrate the phone:\nRotate the phone and draw the shape like “8”  constantly，phone will be calibrated"</string>
    <string name="north">North</string>
    <string name="south">South</string>
    <string name="east">East</string>
    <string name="west">West</string>
    <string name="northeast">Northeast</string>
    <string name="northwest">Northwest</string>
    <string name="southeast">Southeast</string>
    <string name="southwest">Southwest</string>
    <string name="degree">°</string>
    <string name="gps">GPS</string>
    <string name="bluetooth">"BT"</string>
    <string name="fm">"FM"</string>
    <string name="fm2">"FM2"</string>
    <string name="wifi">"WLAN"</string>
    <string name="wifi5g">"5GWLAN"</string>
    <string name="nfc">"NFC"</string>
    <string name="nfc2">"NFC2"</string>
    <string name="otg">"OTG"</string>
    <string name="battery">"Battery"</string>
    <string name="largebattery">"Large Battery Test"</string>
    <string name="clock">"Clock"</string>
    <string name="irtest">"Infrared test"</string>
    <string name="irtest2">"Infrared test2"</string>
    <string name="power_key">"Power"</string>
    <string name="volume_up_key">"Vol +"</string>
    <string name="volume_down_key">"Vol -"</string>
    <string name="camera_key">"Camera"</string>
    <string name="focus_key">"Focus"</string>
    <string name="back_key">"Back"</string>
    <string name="menu_key">"Menu"</string>
    <string name="home_key">"HOME"</string>
    <string name="search_key">"Search"</string>
    <string name="app_key">"APP"</string>
    <string name="hall_o_key">"Opened"</string>
    <string name="hall_c_key">"Covered"</string>
    <string name="a_key">"A"</string>
    <string name="b_key">"B"</string>
    <string name="c_key">"C"</string>
    <string name="d_key">"D"</string>
    <string name="e_key">"E"</string>
    <string name="f_key">"F"</string>
    <string name="g_key">"G"</string>
    <string name="h_key">"H"</string>
    <string name="i_key">"I"</string>
    <string name="j_key">"J"</string>
    <string name="k_key">"K"</string>
    <string name="l_key">"L"</string>
    <string name="m_key">"M"</string>
    <string name="n_key">"N"</string>
    <string name="o_key">"O"</string>
    <string name="p_key">"P"</string>
    <string name="q_key">"Q"</string>
    <string name="r_key">"R"</string>
    <string name="s_key">"S"</string>
    <string name="t_key">"T"</string>
    <string name="u_key">"U"</string>
    <string name="v_key">"V"</string>
    <string name="w_key">"W"</string>
    <string name="x_key">"X"</string>
    <string name="y_key">"Y"</string>
    <string name="z_key">"Z"</string>
    <string name="comma_key">", ;"</string>
    <string name="period_key">". :"</string>
    <string name="alt_key">"ALT"</string>
    <string name="shift_key">"SHIFT"</string>
    <string name="space_key">"SPACE"</string>
    <string name="sym_key">"SYM"</string>
    <string name="enter_key">"ENTER"</string>
    <string name="del_key">"DEL"</string>
    <string name="tab_key">"TAB"</string>
    <string name="vibrate_note">"whether the phone is vibrate?"</string>
    <string name="stop_vibrate">"Stop vibrate"</string>
    <string name="set_color_info">"According to the color of machine, select the appropriate button, click the Save button at the bottom right and exit"</string>
    <string name="black">"Black"</string>
    <string name="blue">"Blue"</string>
    <string name="pink">"Pink"</string>
    <string name="violet">"Violet"</string>
    <string name="yellow">"Yellow"</string>
    <string name="white">"White"</string>
    <string name="quite">"Save setting data"</string>
    <string name="led_light_note">"Please note is the camera flash turned on"</string>
    <string name="red_light">"Red LED"</string>
    <string name="green_light">"Green LED"</string>
    <string name="blue_light">"Blue LED"</string>
    <string name="flash_light">"Flash"</string>
    <string name="close_flash_light">"Trun off Flash"</string>
    <string name="record">"Record"</string>
    <string name="stop_record">"Stop record"</string>
    <string name="earphone_loopback">"Earphone loopback"</string>
    <string name="hifi">"HiFi测试"</string>
    <string name="phone_loopback">"Phone loopback"</string>
    <string name="phone_loopback2">"Mic2"</string>
    <string name="headsethook_note">"Please press the earphone control button"</string>
    <string name="headsethook_press">"Headphone control button has been pressed, begin headphone loop testing"</string>
    <string name="earphone_loopback_note">"Earphone has plugin,start earphone loopback test"</string>
    <string name="earphone_loopback_wrong_note">"Please plug in earphone to start earphone loopback test"</string>
    <string name="earphone_loopback_no_state_note">"Unable to determine the earphone state, please plug in earphone again to start earphone loopback test"</string>
    <string name="phone_loopback_note">"Earphone unplugged,start phone loopback test"</string>
    <string name="phone_loopback_wrong_note">"Please plug out the earphone to start phone loopback test"</string>
    <string name="phone_loopback_no_state_note">"Unable to determine the earphone state, if the earphone is plugged in, unplug it to start phone loopback test"</string>
    <string name="record_test">"Click the button to switch the sound recording. if earphone had plug in then test earphone, otherwise test the phone"</string>
    <string name="tone_note">"Whether the speaker emit 1KHz sound 15 seconds"</string>
    <string name="receiver_note">"Whether the Receiver emit 300Hz sound 15 seconds"</string>
    <string name="receiver_note_2">"Whether the Receiver emit 500Hz sound 15 seconds?"</string>
    <string name="flash_note">"The flashlight is turned on?"</string>
    <string name="laser_offset_cal">Offset calibration</string>
    <string name="laser_crosstalk_cal">Crosstalk calibration</string>
    <string name="laser_cal_note" formatted="false">(请使用标准的88%白卡和17%灰卡校准，严禁随意校准)</string>
</resources>